services/api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dengue-api
  labels:
    app: dengue-api
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: dengue-api
